<!--
  ~ Copyright 2015 Brad Zacher
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">PopularMovies</string>

    <string name="action_settings">Settings</string>
    <string name="generic_share">Share trailer to...</string>

    <!-- Main Activity String -->
    <string name="main_activity_title">Popular Movies</string>
    <string name="main_activity_item_placeholder">Loading...</string>
    <string name="main_activity_no_favourites_text">You have no favourites!</string>
    <string name="internet_error">Could not fetch data.</string>
    <string name="retry">Retry</string>

    <!-- Movie Details Activity String -->
    <string name="movie_details_activity_title">Details</string>
    <string name="movie_details_backdrop_image_description">Movie Backdrop</string>
    <string name="movie_details_activity_favourite_button_text">Favourite</string>
    <string name="movie_details_activity_vote_average_suffix" translatable="false">%</string>
    <string name="movie_details_activity_vote_average_prefix">Rating</string>
    <string name="movie_details_activity_vote_count_suffix"> Votes</string>
    <string name="movie_details_activity_summary_title">Summary</string>
    <string name="movie_details_activity_summary_release_date">Release Date</string>
    <string name="movie_details_activity_summary_revenue">Revenue</string>
    <string name="movie_details_activity_summary_genres">Genres</string>
    <string name="movie_details_activity_summary_status">Status</string>
    <string name="movie_details_activity_summary_language">Language</string>
    <string name="movie_details_activity_summary_runtime">Runtime</string>
    <string name="movie_details_activity_summary_runtime_units">min</string>
    <string name="movie_details_activity_summary_budget">Budget</string>
    <string name="movie_details_activity_reviews_title">Reviews</string>
    <string name="movie_details_activity_reviews_no_reviews">No Reviews</string>
    <string name="movie_details_activity_trailers_title">Trailers</string>
    <string name="movie_details_activity_trailers_no_trailers">No Trailers</string>
    <string name="movie_details_activity_trailers_play">Play Trailer</string>

    <!-- Logging strings -->
    <string name="log_tag" translatable="false">@string/app_name</string>
    <string name="log_search_formatter" translatable="false">Search string: "%1$s"</string>
    <string name="log_onCreate_formatter" translatable="false">Created Activity: "%1$s"</string>
    <string name="log_method_call_formatter" translatable="false">Called Method: "%1$s" on class "%2$s"</string>
    <string name="log_sync_start" translatable="false">Triggered sync of: "%1$s"</string>
    <string name="log_sync_end" translatable="false">Finished sync of: "%1$s"</string>
    <string name="log_wtf" translatable="false">This should never happen</string>
    <string name="log_api_error" translatable="false">TheMovieDb API Error:
    URL: %1$s
    STATUS: %2$s
    MESSAGE: %3$s</string>
    <string name="log_account_add_error" translatable="false">There was an error adding the account for syncing.</string>
    <string name="log_image_load_error">Failed to load image: %1$s</string>

    <!-- Content Descriptions -->
    <string name="content_description_item">Item Image</string>
    <string name="content_description_movie">Movie Poster</string>

    <!-- Sync Strings -->
    <string name="provider_authority">au.com.zacher.popularmovies.provider</string>
    <string name="provider_account_type">au.com.zacher.popularmovies</string>

    <!-- Preference Strings -->
    <string name="pref_discovery_sort_order">pref_discovery_sort_order</string>
    <string name="pref_label_discovery_sort_order_most_popular">Most Popular</string>
    <string name="pref_label_discovery_sort_order_highest_rated">Highest Rated</string>
    <string name="pref_label_discovery_sort_order_favourites">Favourites</string>
    <string name="pref_default_discovery_sort_order">@string/pref_label_discovery_sort_order_most_popular</string>
</resources>
