<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Brad Zacher
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false">
    <include layout="@layout/fragment_loading_ui" />

    <ScrollView
        android:id="@+id/movie_summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/accent">
                <ImageView
                    android:id="@+id/movie_mini_poster"
                    android:maxWidth="86dp"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_item"
                    tools:src="@drawable/ic_movie_black_48dp"/>
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/movie_tagline"
                        style="@style/MovieDetails_Tagline_Text"
                        tools:text="Cras eu cursus diam. Etiam tristique gravida ipsum eget lacinia." />
                </RelativeLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/movie_plot_synopsis"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget vehicula felis, a egestas elit. Etiam accumsan, turpis ut facilisis dictum, elit mi semper enim, sed suscipit urna leo ut metus. Morbi dapibus nibh libero, eu volutpat mauris convallis ac. Nullam quis cursus enim. Cras porttitor arcu a tempor malesuada" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/accent"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:id="@+id/movie_vote_count"
                        style="@style/MovieDetails_FavouritesBar_Text"
                        tools:text="1000" />
                    <TextView
                        style="@style/MovieDetails_FavouritesBar_Text"
                        android:layout_below="@id/movie_vote_count"
                        android:text="@string/movie_details_activity_vote_count_suffix"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageButton
                        android:id="@+id/add_favourite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favorite_border_black_36dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/movie_details_activity_favourite_button_text"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="horizontal"
                    android:padding="16dp">
                    <TextView
                        android:id="@+id/movie_vote_average_prefix"
                        style="@style/MovieDetails_FavouritesBar_Text"
                        android:text="@string/movie_details_activity_vote_average_prefix"/>
                    <TextView
                        android:id="@+id/movie_vote_average"
                        style="@style/MovieDetails_FavouritesBar_Text"
                        android:layout_below="@id/movie_vote_average_prefix"
                        tools:text="8.5 / 10" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="vertical">
                <TextView
                    style="@style/CardTitle"
                    android:text="@string/movie_details_activity_summary_title"/>
                <LinearLayout
                    android:id="@+id/movie_summary_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </LinearLayout>
            <!-- This is just a placeholder for the reviews fragment, which needs to be dynamically created -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movie_reviews_list" />
        </LinearLayout>
    </ScrollView>
    <au.com.zacher.popularmovies.activity.layout.CollapsingTitleLayout
        android:id="@+id/backdrop_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
        app:expandedTextSize="40dp"
        app:expandedMargin="16dp">
        <ImageView
            android:id="@+id/backdrop_toolbar_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:scaleType="centerInside"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/movie_details_backdrop_image_description" />

        <include layout="@layout/toolbar" />
    </au.com.zacher.popularmovies.activity.layout.CollapsingTitleLayout>
</RelativeLayout>